# mylana

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
db/: README.md
src/mylana/: crew.py  main.py
src/mylana/config/: agents.yaml  tasks.yaml
src/mylana/tools/: duckduckGoSearch_tool.py  exchange_rate_tool.py  finance_data_loader.py
