[project]
name = "mylana"
version = "0.1.0"
description = "Personal finance AI agent system"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "crewai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mylana"]

[project.scripts]
mylana = "mylana.main:run"
run_crew = "mylana.main:run"